--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -11,7 +11,7 @@
 
 <body id="top">
 
-<div th:replace="/fragments/banner"></div>
+<div th:replace="fragments/banner"></div>
 
 <!-- Main -->
 <div id="main">
@@ -20,6 +20,6 @@
     </div>
 </div>
 
-<div th:replace="/fragments/footer"></div>
+<div th:replace="fragments/footer"></div>
 </body>
 </html>
